--- a/examples/introduction.ipynb
+++ b/examples/introduction.ipynb
@@ -20,44 +20,35 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a2c23fa0e6b94f6a88fa314ff02fe502",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Map(center=[0.0, 0.0])"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "m = Map(center=[0.0, 0.0], zoom=2)\n",
-    "m "
+    "from ipyopenlayers import GeoJSON"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "3265c9dce2864936a1f98ae5c591f899",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Map(center=[0.0, 0.0], zoom=4.0)"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "layer=TileLayer()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "m.add_layer(layer)"
+    "m = Map(center=[0.0, 0.0], zoom=4)\n",
+    "m"
    ]
   },
   {
@@ -66,7 +57,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "zoom=ZoomSlider()"
+    "layer=TileLayer()\n",
+    "m.add_layer(layer)"
    ]
   },
   {
@@ -75,7 +67,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "m.add_control(zoom)"
+    "layere=TileLayer()\n",
+    "layere.url='https://{a-c}.basemaps.cartocdn.com/dark_all/{z}/{x}/{y}.png'\n",
+    "m.add_layer(layere)"
    ]
   },
   {
@@ -84,7 +78,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "full=FullScreen()"
+    "m.remove_layer(layere)"
    ]
   },
   {
@@ -93,6 +87,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "zoom=ZoomSlider()\n",
+    "full=FullScreen()\n",
     "scale=ScaleLine()\n",
     "coord=MousePosition()"
    ]
@@ -103,7 +99,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "m.add_control(scale)\n"
+    "m.add_control(zoom)\n",
+    "m.add_control(scale)\n",
+    "m.add_control(coord)\n",
+    "m.add_control(full)"
    ]
   },
   {
@@ -112,162 +111,39 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "m.add_control(coord)"
+    "image=ImageOverlay()\n",
+    "image.image_url=\"https://i.imgur.com/06Q1fSz.png\"\n",
+    "m.add_overlay(image)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "3265c9dce2864936a1f98ae5c591f899",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Map(center=[0.0, 0.0], controls=[ZoomSlider(), ScaleLine(), MousePosition(), FullScreen()], layers=[TileLayer(…"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "m.add_control(full)"
+    "m"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 12,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'https://{a-c}.tile.openstreetmap.org/{z}/{x}/{y}.png'"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "layer.url"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "layere=TileLayer()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "layere.url='https://{a-c}.basemaps.cartocdn.com/dark_all/{z}/{x}/{y}.png'"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'https://{a-c}.basemaps.cartocdn.com/dark_all/{z}/{x}/{y}.png'"
-      ]
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "layere.url"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "m.add_layer(layere)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[TileLayer(),\n",
-       " TileLayer(url='https://{a-c}.basemaps.cartocdn.com/dark_all/{z}/{x}/{y}.png')]"
-      ]
-     },
-     "execution_count": 16,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "m.layers"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "m.remove_layer(layere)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "89eb9976b4ec4065a24275a247fe2318",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "ImageOverlay(position=[0, 0])"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "image=ImageOverlay()\n",
-    "image"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "image.image_url=\"https://i.imgur.com/06Q1fSz.png\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "m.add_overlay(image)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -276,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -285,95 +161,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[ImageOverlay(image_url='https://i.imgur.com/06Q1fSz.png', position=[-70, 70])]"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "m.overlays"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 24,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "imaget=ImageOverlay()\n",
-    "imaget.image_url=\"https://upload.wikimedia.org/wikipedia/en/a/a9/Example.jpg\"\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 25,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "m.add_overlay(imaget)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "m.remove_overlay(image)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "video=VideoOverlay()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "video.video_url=\"https://www.w3schools.com/html/mov_bbb.webm\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "m.add_overlay(video)"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
-    "video.video_url=\"https://www.mapbox.com/bites/00188/patricia_nasa.webm\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "video.position=[-70,80]"
+    "imaget=ImageOverlay()\n",
+    "imaget.image_url=\"https://upload.wikimedia.org/wikipedia/en/a/a9/Example.jpg\"\n",
+    "m.add_overlay(imaget)"
    ]
   },
   {
@@ -382,8 +176,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "video2=VideoOverlay()\n",
-    "video2.video_url=\"https://www.mapbox.com/bites/00188/patricia_nasa.webm\""
+    "m.remove_overlay(imaget)"
    ]
   },
   {
@@ -392,7 +185,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "m.add_overlay(video2)"
+    "video=VideoOverlay()\n",
+    "video.video_url=\"https://www.mapbox.com/bites/00188/patricia_nasa.webm\"\n",
+    "m.add_overlay(video)"
    ]
   },
   {
@@ -401,7 +196,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "m.remove_overlay(video)"
+    "video.video_url=\"https://www.w3schools.com/html/mov_bbb.webm\"\n",
+    "video.position=[-70,80]"
    ]
   },
   {
@@ -410,33 +206,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "m.remove_overlay(video2)"
+    "m.remove_overlay(video)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 20,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "5692329a9806438fbb2be2bc0334475e",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "PopupOverlay(position=[0, 0])"
-      ]
-     },
-     "execution_count": 20,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "popup=PopupOverlay()\n",
-    "popup"
+    "video2=VideoOverlay()\n",
+    "video2.video_url=\"https://www.mapbox.com/bites/00188/patricia_nasa.webm\"\n",
+    "m.add_overlay(video2)"
    ]
   },
   {
@@ -445,7 +226,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "popup.popup_content='Maap'"
+    "m.remove_overlay(video2)"
    ]
   },
   {
@@ -454,6 +235,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "popup=PopupOverlay()\n",
+    "popup.popup_content='Maap'\n",
     "m.add_overlay(popup)"
    ]
   },
@@ -464,6 +247,301 @@
    "outputs": [],
    "source": [
     "m.remove_overlay(popup)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "widget= GeoJSON()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "widget = GeoJSON(\n",
+    "    data={\n",
+    "        'type': 'FeatureCollection',\n",
+    "        'features': [\n",
+    "            {\n",
+    "                'type': 'Feature',\n",
+    "                'geometry': {\n",
+    "                    'type': 'Point',\n",
+    "                    'coordinates': [0, 0],\n",
+    "                },\n",
+    "                'properties': {\n",
+    "                    'name': 'Null Island',\n",
+    "                },\n",
+    "            },\n",
+    "        ],\n",
+    "    },\n",
+    "    style={\n",
+    "        'Point': {\n",
+    "            'radius': 10,\n",
+    "            'fillColor': '#ff7800',\n",
+    "            'color': '#000',\n",
+    "            'weight': 1,\n",
+    "            'opacity': 1,\n",
+    "            'fillOpacity': 0.8,\n",
+    "        },\n",
+    "    },\n",
+    "    visible=True\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "m.add_layer(widget)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "widget.visible = False"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "widget.visible=True"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'type': 'FeatureCollection',\n",
+       " 'features': [{'type': 'Feature',\n",
+       "   'geometry': {'type': 'Point', 'coordinates': [0, 0]},\n",
+       "   'properties': {'name': 'Null Island'}}]}"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "widget.data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import matplotlib as mpl\n",
+    "import matplotlib.cm\n",
+    "import matplotlib.colors\n",
+    "import numpy as np\n",
+    "\n",
+    "\n",
+    "def n_colors(n, colormap=mpl.cm.Blues):\n",
+    "    data = np.linspace(0.0, 1.0, n)\n",
+    "    c = [mpl.colors.rgb2hex(d[0:3]) for d in colormap(data)]\n",
+    "    return c\n",
+    "\n",
+    "\n",
+    "def data_to_colors(data, colormap=mpl.cm.Blues):\n",
+    "    c = [mpl.colors.rgb2hex(d[0:3]) for d in colormap(mpl.colors.Normalize()(data))]\n",
+    "    return c"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    }
+   },
+   "outputs": [],
+   "source": [
+    "import json\n",
+    "\n",
+    "with open(\"demo.json\") as f:\n",
+    "    data = json.load(f)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "20\n"
+     ]
+    }
+   ],
+   "source": [
+    "n_features = len(data[\"features\"])\n",
+    "colors = n_colors(n_features)\n",
+    "print(n_features)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['#f7fbff',\n",
+       " '#edf4fc',\n",
+       " '#e3eef8',\n",
+       " '#d8e7f5',\n",
+       " '#cee0f2',\n",
+       " '#c2d9ee',\n",
+       " '#b2d2e8',\n",
+       " '#a0cbe2',\n",
+       " '#8cc0dd',\n",
+       " '#75b4d8',\n",
+       " '#63a8d3',\n",
+       " '#519ccc',\n",
+       " '#4090c5',\n",
+       " '#3282be',\n",
+       " '#2474b7',\n",
+       " '#1966ad',\n",
+       " '#0e59a2',\n",
+       " '#084b93',\n",
+       " '#083d7f',\n",
+       " '#08306b']"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "colors"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    }
+   },
+   "outputs": [],
+   "source": [
+    "for feature, color in zip(data[\"features\"], colors):\n",
+    "    feature[\"properties\"][\"style\"] = {\n",
+    "        \"color\": color,\n",
+    "        \"weight\": 1,\n",
+    "        \"fillColor\": color,\n",
+    "        \"fillOpacity\": 0.5,\n",
+    "    }"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'geometry': {'type': 'MultiPolygon',\n",
+       "  'coordinates': [[[[-77.39940577291571, 34.5780540544853],\n",
+       "     [-77.39940610066606, 34.57805427015046],\n",
+       "     [-77.39940640189788, 34.57805446836596],\n",
+       "     [-77.39940680648922, 34.57805473459376],\n",
+       "     [-77.39940687019617, 34.57805477651398],\n",
+       "     [-77.39940689381065, 34.57805472199389],\n",
+       "     [-77.3994073308358, 34.57805432604519],\n",
+       "     [-77.39940731720131, 34.578054179242265],\n",
+       "     [-77.39940728534575, 34.578053836252096],\n",
+       "     [-77.39940728147378, 34.57805380828763],\n",
+       "     [-77.39940726378504, 34.57805363205166],\n",
+       "     [-77.39940725501071, 34.57805361742678],\n",
+       "     [-77.39940719593868, 34.57805349818902],\n",
+       "     [-77.39940711258689, 34.57805350039165],\n",
+       "     [-77.39940706262787, 34.57805349996589],\n",
+       "     [-77.3994070238417, 34.578053501157314],\n",
+       "     [-77.39940689549977, 34.57805350509971],\n",
+       "     [-77.3994068702403, 34.5780535173504],\n",
+       "     [-77.39940683257294, 34.57805352755014],\n",
+       "     [-77.39940665584797, 34.57805351246129],\n",
+       "     [-77.39940650171212, 34.578053517196004],\n",
+       "     [-77.39940646539253, 34.578053518311656],\n",
+       "     [-77.39940610067742, 34.578053945657025]]]]},\n",
+       " 'type': 'Feature',\n",
+       " 'id': 'demo0',\n",
+       " 'properties': {'style': {'color': '#f7fbff',\n",
+       "   'weight': 1,\n",
+       "   'fillColor': '#f7fbff',\n",
+       "   'fillOpacity': 0.5}}}"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data[\"features\"][0]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "g = GeoJSON(data=data)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "m.add_layer(g)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "m.remove_layer(g)"
    ]
   },
   {
