Remove package-lock.json from repository+ get center and zoom from view

--- a/examples/introduction.ipynb
+++ b/examples/introduction.ipynb
@@ -33,7 +33,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "64e2043a00d5422691dab698364ed572",
+       "model_id": "3e0bd2ad37f64f7cbb1aee7506811d37",
        "version_major": 2,
        "version_minor": 0
       },
@@ -59,6 +59,46 @@
    "source": [
     "layer=TileLayer()\n",
     "m.add_layer(layer)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[-70.95751493225418, 47.549650753947276]"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "m.center"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4.224657265407832"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "m.zoom"
    ]
   },
   {
