--- a/examples/introduction.ipynb
+++ b/examples/introduction.ipynb
@@ -22,7 +22,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from ipyopenlayers import GeoJSON"
+    "from ipyopenlayers import GeoJSON, HeatmapLayer"
    ]
   },
   {
@@ -33,12 +33,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "3265c9dce2864936a1f98ae5c591f899",
+       "model_id": "4c76f387aa9d4970b97a987e4dbae92f",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "Map(center=[0.0, 0.0], zoom=4.0)"
+       "Map(center=[0.0, 0.0])"
       ]
      },
      "execution_count": 3,
@@ -47,13 +47,13 @@
     }
    ],
    "source": [
-    "m = Map(center=[0.0, 0.0], zoom=4)\n",
+    "m = Map(center=[0.0, 0.0], zoom=2)\n",
     "m"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -63,7 +63,47 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[0.0, 0.0]"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "m.center"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2.0"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "m.zoom"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -74,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -83,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -95,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -107,38 +147,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
     "image=ImageOverlay()\n",
     "image.image_url=\"https://i.imgur.com/06Q1fSz.png\"\n",
     "m.add_overlay(image)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "3265c9dce2864936a1f98ae5c591f899",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Map(center=[0.0, 0.0], controls=[ZoomSlider(), ScaleLine(), MousePosition(), FullScreen()], layers=[TileLayer(…"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "m"
    ]
   },
   {
@@ -172,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -181,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -192,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -202,7 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -211,7 +226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -222,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -231,7 +246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -242,7 +257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -251,7 +266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -260,7 +275,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -296,7 +311,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -305,7 +320,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -314,7 +329,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -323,7 +338,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -335,7 +350,7 @@
        "   'properties': {'name': 'Null Island'}}]}"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -346,7 +361,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -369,7 +384,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 30,
    "metadata": {
     "jupyter": {
      "source_hidden": true
@@ -385,7 +400,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 31,
    "metadata": {
     "jupyter": {
      "source_hidden": true
@@ -408,7 +423,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -436,7 +451,7 @@
        " '#08306b']"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -447,7 +462,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 33,
    "metadata": {
     "jupyter": {
      "source_hidden": true
@@ -466,7 +481,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 34,
    "metadata": {
     "jupyter": {
      "source_hidden": true
@@ -508,7 +523,7 @@
        "   'fillOpacity': 0.5}}}"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -519,7 +534,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -528,7 +543,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -537,12 +552,116 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
     "m.remove_layer(g)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "points = [[0, 0]]\n",
+    "heatmap_layer = HeatmapLayer(blur=20, radius=15, points=points)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "m.add_layer(heatmap_layer)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "points_data_france = [\n",
+    "    [48.8566, 2.3522, 0.8],  # Paris\n",
+    "    [45.7640, 4.8357, 0.6],  # Lyon\n",
+    "    [43.2965, 5.3698, 0.7],  # Marseille\n",
+    "    [43.6045, 1.4442, 0.5],  # Toulouse\n",
+    "    [43.7102, 7.2620, 0.4],  # Nice\n",
+    "    [47.2184, -1.5536, 0.3], # Nantes\n",
+    "    [48.5734, 7.7521, 0.6],  # Strasbourg\n",
+    "    [43.6119, 3.8772, 0.5],  # Montpellier\n",
+    "    [44.8378, -0.5792, 0.4], # Bordeaux\n",
+    "    [50.6292, 3.0573, 0.3],  # Lille\n",
+    "]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "heatmap_layer = HeatmapLayer(blur=20, radius=15, points=points_data_france)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "points_data_france_1 = [\n",
+    "    [42.3656, 9.1493, 16.79],  # Haute-Corse\n",
+    "    [43.4527, 6.2649, 16.28],  # Var\n",
+    "    [43.6043, 5.0123, 15.93],  # Bouches-du-Rhône\n",
+    "    [42.6987, 2.8956, 15.87],  # Pyrénées-Orientales\n",
+    "    [43.6119, 3.8772, 15.81],  # Hérault\n",
+    "    [41.9264, 8.7364, 15.64],  # Corse-du-Sud\n",
+    "    [44.8378, -0.5792, 15.28],  # Gironde\n",
+    "    [43.8914, -1.2200, 15.2],  # Landes\n",
+    "    [43.9493, 4.8055, 15.17],  # Vaucluse\n",
+    "    [44.1004, 1.3555, 14.85],  # Tarn-et-Garonne\n",
+    "    [44.3058, 0.6283, 14.85],  # Lot-et-Garonne\n",
+    "    [43.6045, 1.4442, 14.75],  # Haute-Garonne\n",
+    "    [43.9074, 4.5079, 14.65],  # Gard\n",
+    "    [43.6205, 0.5898, 14.52],  # Gers\n",
+    "    [43.7102, 7.2620, 14.41],  # Alpes-Maritimes\n",
+    "    [45.7515, -0.6331, 14.34],  # Charente-Maritime\n",
+    "    [44.6144, 1.9023, 14.05],  # Lot\n",
+    "    [43.6043, 2.2344, 13.88],  # Tarn\n",
+    "    [43.1566, 2.3605, 13.88],  # Aude\n",
+    "    [43.2998, -0.3674, 13.85],  # Pyrénées-Atlantiques\n",
+    "    # Continue for other locations as needed\n",
+    "]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "heatmap_layer1 = HeatmapLayer(blur=20, radius=15, points=points_data_france_1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "m.add_layer(heatmap_layer1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
