--- a/examples/introduction.ipynb
+++ b/examples/introduction.ipynb
@@ -33,7 +33,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "807b9e94c0624a2381d44c0cb242874e",
+       "model_id": "7d186148c6d449b3a5e3299f201afdce",
        "version_major": 2,
        "version_minor": 0
       },
@@ -59,6 +59,28 @@
    "source": [
     "layer=TileLayer()\n",
     "m.add_layer(layer)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "points_data_france = [\n",
+    "    [48.8566, 2.3522, 0.8],  # Paris\n",
+    "    [45.7640, 4.8357, 0.6],  # Lyon\n",
+    "    [43.2965, 5.3698, 0.7],  # Marseille\n",
+    "    [43.6045, 1.4442, 0.5],  # Toulouse\n",
+    "    [43.7102, 7.2620, 0.4],  # Nice\n",
+    "    [47.2184, -1.5536, 0.3], # Nantes\n",
+    "    [48.5734, 7.7521, 0.6],  # Strasbourg\n",
+    "    [43.6119, 3.8772, 0.5],  # Montpellier\n",
+    "    [44.8378, -0.5792, 0.4], # Bordeaux\n",
+    "    [50.6292, 3.0573, 0.3],  # Lille\n",
+    "]\n",
+    "heatmap_layer = HeatmapLayer(blur=20, radius=15, points=points_data_france)\n",
+    "m.add_layer(heatmap_layer)"
    ]
   },
   {
